# DOESS

./: .gitignore  README.md  doess_opt.py  preset_sequences.json  pyproject.toml
aht_analysis/: aht_finite.py  aht_rotation.py  aht_system.py  example.py  load_seq.py  utils.py  visualization.py
configurations/: configN1.json  configN2.json  configN2_PI4.json  configN2v2.json  configN2v3.json  configN2v4.json  configN2v5.json
data/AI_designs/: data.csv  indicators.csv  pulse_matrices.npy
data/init_dataset/: data.csv  indicators.csv  pulse_matrices.npy
doess/: neural_surrogate.py  objective_func.py  tree_exploration.py  utils.py
sim/: awg.py  config.py  data_analyzer.py  euler_decomposition.py  objectives.py  register.py  sequence.py  simulation.py  utils.py
