[build-system]
requires = ["setuptools>=75.1.0", "wheel>=0.44.0"]
build-backend = "setuptools.build_meta"

[project]
name = "das_ai"
version = "0.1.0"
description = "DAS-AI: Designing alloy from 100% scrap with multi-modal AI"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Bo Peng", email = "pengb21@mails.tsinghua.edu.cn"},
    {name = "Ye Wei", email = "ye.wei@cityu.edu.hk"},
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8.5",
]

dependencies = [
    "numpy>=1.19.5",
    "pandas>=1.4.4",
    "matplotlib>=3.6.3",
    "seaborn>=0.12.2",
    "scikit-learn>=1.2.2",
    "scipy>=1.10.1",
    "tensorflow>=2.5.0",
    "pytest>=7.3.1",
    "tqdm>=4.65.0",
    "openpyxl>=3.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest-sugar>=1.0.0",
    "hydra-core>=1.3.2",
    "jupyter>=1.0.0",
]
[project.urls]
"Homepage" = "https://github.com/Bop2000/DAS-AI"

[tool.setuptools]
packages = ["das_ai"]

[tool.setuptools.package-data]
das_ai = ["LICENSE", "README.md"]
