[build-system]
requires = ["setuptools>=75.1.0", "wheel>=0.44.0"]
build-backend = "setuptools.build_meta"

[project]
name = "doess"
version = "0.1.0"
description = "DOESS: Data-driven evOlutionary approach to Explore the Sequence Space"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Yang Wang", email = "ywang.qt@gmail.com"},
    {name = "Bo Peng", email = "pengb21@mails.tsinghua.edu.cn"},
    {name = "Ye Wei", email = "ye.wei@cityu.edu.hk"},
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10.18",
]

dependencies = [
    "numpy>=1.24.3",
    "pandas>=2.3.1",
    "matplotlib>=3.10.5",
    "seaborn>=0.13.2",
    "scikit-learn>=1.7.1",
    "scipy>=1.15.3",
    "tensorflow>=2.11.0",
    "pytest>=7.3.1",
    "tqdm>=4.67.1",
    "openpyxl>=3.1.5",
    "ray>=2.48.0",
    "qutip>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest-sugar>=1.0.0",
    "hydra-core>=1.3.2",
    "jupyter>=1.0.0",
]
[project.urls]
"Homepage" = "https://github.com/Bop2000/DOESS"

[tool.setuptools]
packages = ["doess"]

[tool.setuptools.package-data]
doess = ["LICENSE", "README.md"]
